# mokert

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
cmake/: cpp.cmake  cuda.cmake  hip.cmake
include/moke/: native.hpp  runtime.hpp
include/moke/native/: algorithm.hpp  memory.hpp  runtime.hpp  timer.hpp
include/moke/runtime/: functional.hpp  memory.hpp  profiler.hpp  vector.hpp
include/moke/runtime/container/: allocator.hpp  vector_impl.inc
include/moke/runtime/functional/: compare.hpp  fill.hpp
include/mokert/: common.hpp  functional.hpp  memory.hpp  mokert.hpp  native.hpp  profiler.hpp  vector.hpp
include/mokert/container/: allocator.hpp  vector_impl.inc
include/mokert/functional/: compare.hpp  fill.hpp
include/mokert/native/: algorithm.hpp  memory.hpp  runtime.hpp  timer.hpp
src/: CMakeLists.txt
src/mokert/: compare.cuh  memcmp.cuh  random.cuh
src/native/cuda/: CMakeLists.txt  algorithm.cu  memory.cu  runtime.cpp  timer.cpp
src/native/hip/: CMakeLists.txt  algorithm.hip  memory.hip  runtime.cpp  timer.cpp
test/: CMakeLists.txt
test/include/moketest/: testing_utils.hpp  type_traits.hpp
test/native/: test_algorithm.cpp  test_memory.cpp  test_timer.cpp
test/runtime/: test_functional.cpp  test_profiler.cpp  test_vector.cpp
